testdata/invalid/xdp_raw_return.hzn
package probes

@xdp
func Bad(ctx xdp.Context) i32 {
    return 0
}
